fix(blog-content): l/r spacing

--- a/src/components/pages/blog/blog-hero.module.scss
+++ b/src/components/pages/blog/blog-hero.module.scss
@@ -1,5 +1,3 @@
 .container {
-  margin-top: spacer(32);
-  margin-left: 0;
-  margin-right: 0;
+  margin: spacer(32) auto 0;
 }
